# renderer-cuda

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README  README.md  README.profile.CUDA  aclocal.m4  config.h.in  configure  configure.ac
3D-objects/: .gitignore
contrib/: createTemplateInvocations.py
lib3ds-1.3.0/: Makefile.in  aclocal.m4  config.h.in  configure
lib3ds-1.3.0/lib3ds/: Makefile.in  background.c  file.c
lib3ds-1.3.0/tools/: Makefile.in
renderer-cuda-archlinux/: 3d.h  Algebra.cpp  Algebra.h  BVH.cpp  Base3d.h  CUDAraytracer  Camera.cpp  Camera.h  Clock.h  Keyboard.cpp  Keyboard.h  Loader.cpp  Types.h  cudarenderer.h  findgllib.mk  main.cpp
renderer-cuda-archlinux/3D-objects/: chessboard.tri.bvh
src/: Algebra.h  Makefile.am  Makefile.in  Types.h  config.h.in  cudarenderer.cu  cudarenderer.h  main.cpp
src/common/: 3d.h  Algebra.cpp  Algebra.h  BVH.cpp  BVH.h  Base3d.h  Camera.cpp  Camera.h  Clock.h  ConstantsAndGlobals.h  Keyboard.cpp  Keyboard.h  Loader.cpp  Loader.h  Makefile.in  Types.h  Utility.cpp
src/cuda/: Makefile.am  Makefile.in  cudarenderer.cu  cudarenderer.h  main.cpp
src/rocm_hip/: Makefile.am  Makefile.in  hiprenderer.h  hiprenderer.hip.cpp  hiprenderer_globals.h  main_rocm.cpp
src_rocm/: .gitignore  3d.h  Algebra.cpp  Algebra.h  BUILD_QUICKSTART.md  Base3d.h  CUDA_TO_HIP_CONVERSION.md  Camera.cpp  Camera.h  Clock.h  Keyboard.cpp  Keyboard.h  Loader.cpp  Makefile.am_rocm  Makefile_rocm  PORT_SUMMARY.md  README_ROCM.md  Types.h  config.h  cudarenderer.h  main.cpp  main_rocm.cpp
